--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -42,7 +42,9 @@ spec:
     singular: checluster
   scope: Namespaced
   versions:
-    - name: v1
+    - deprecated: true
+      deprecationWarning: org.eclipse.che/v1 CheCluster API is deprecated
+      name: v1
       schema:
         openAPIV3Schema:
           description: The `CheCluster` custom resource allows defining and managing
