Update warning message
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -42,7 +42,7 @@ spec:
   scope: Namespaced
   versions:
   - deprecated: true
-    deprecationWarning: org.eclipse.che/v1 CheCluster API is deprecated
+    deprecationWarning: org.eclipse.che/v1 CheCluster is deprecated and will be removed in future releases
     name: v1
     schema:
       openAPIV3Schema:
