--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -47,7 +47,7 @@ spec:
   scope: Namespaced
   versions:
   - deprecated: true
-    deprecationWarning: org.eclipse.che/v1 CheCluster API is deprecated
+    deprecationWarning: org.eclipse.che/v1 CheCluster is deprecated and will be removed in future releases
     name: v1
     schema:
       openAPIV3Schema:
